# md407-vscode-template

./: CMakeLists.txt  LICENSE  Readme.md  md407.ld
cmake/: utils.cmake
cmake/toolchains/: arm-none-eabi.cmake
lib/: .gitignore  CMakeLists.txt  README.md
libstm/: CMakeLists.txt
libstm/STM32F4xx_StdPeriph_Driver/inc/: stm32f4xx.h
libstm/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_can.c
src/: add.c  main.c  startup.c
